Link to iOS version.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <ul>
 	<li><a href="fathers/bible">Aggregation of Ante-Nicene Feathers in the New Testament</a></li>
 	<li><a href="fathers/bible/bible.html">Interactive Ante-Nicea Fathers cross-referenced with the New Testament</a></li>
+	<li><a href="https://apps.apple.com/us/app/fathers/id6744301843">Mobile/Offline version (iOS)</a> by 
+	<a href="https://x.com/twinforces">@twinforces</a>
+	If you want an android version DM him your Google Play email, 
+	he needs 12 testers to use it for 14 days in a row.</li>
 	<li><a href="fathers/schaff">Ante-Nicene Fathers Mirror</a> as originally hosted by <a href="https://www.ccel.org/fathers2">Christian Classics Ethereal Library</a></li>
 	<li><a href="datepicker">4-Click Date Picker</a></li>
 </ul>
